--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -3,7 +3,8 @@
   <%= f.label :title, class: "control-label" %>
   <%= f.text_field :title, class: "form-control" %>
 
-  <%= f.label :title, class: "control-label" %>
+  <%= f.label :description, class: "control-label" %>
   <%= f.text_field :description, class: "form-control" %>
 
+  <%= f.submit "Save / Update", class: "btn btn-primary" %>
 <% end %>
