--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -6,5 +6,5 @@
   <%= f.label :description, class: "control-label" %>
   <%= f.text_field :description, class: "form-control" %>
 
-  <%= f.submit "Save / Update", class: "btn btn-primary" %>
+  <%= f.submit "Save / Edit", class: "btn btn-primary" %>
 <% end %>
