--- a/app/views/lists/_shared_links.html.erb
+++ b/app/views/lists/_shared_links.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "Edit", "#{object.id}/edit" %>
-<%= link_to "Delete", "#{object.id}", data: {method: 'DELETE'} %>
+<%= link_to "Edit", edit_list_path(object) %>
+<%= link_to "Delete", delete_list_path(object), data: {method: 'DELETE'} %>
